@@ -119,7 +119,7 @@ REFIT_CONFIG GlobalConfig = {
     /* SilenceAPFS = */ TRUE,
     /* SyncAPFS = */ TRUE,
     /* NvramProtect = */ TRUE,
-    /* ScanAllESP = */ FALSE,
+    /* ScanAllESP = */ TRUE,
     /* HelpTags = */ TRUE,
     /* HelpText = */ TRUE,
     /* NormaliseCSR = */ FALSE,
