@@ -1,6 +1,9 @@
 0.13.3.AD (PRE_RELEASE):
 -----------------------
-- PENDING
+- Amends `ScanAllESP` Feature
+  * Now aligned with upstream implementation and scans all ESPs by default
+  * Hence, the "Opt-Out" `decline_esp_filter` token has been replaced by an "Opt-In `enable_esp_filter` token
+  * A previous issue where the token operated the wrong way round has been fixed
 
 
 0.13.3.AC (06 Dec 2022):
